--- a/pytorch_lightning.ipynb
+++ b/pytorch_lightning.ipynb
@@ -13,6 +13,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install --quiet pytorch-lightning"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -20,8 +29,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "0c0995c6b1f0c6aff0a6ec92f472ee82e92038222c855613d81708e1126a8f7a"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('torch')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
