WIP: segmentation module

--- a/pytorch_lightning.ipynb
+++ b/pytorch_lightning.ipynb
@@ -17,7 +17,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! pip install --quiet pytorch-lightning"
+    "# ! pip install --quiet pytorch-lightning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import urllib.request\n",
+    "from types import SimpleNamespace\n",
+    "from urllib.error import HTTPError\n",
+    "\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pytorch_lightning as pl\n",
+    "# import seaborn as sns\n",
+    "# import tabulate\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.utils.data as data\n",
+    "import torchvision\n",
+    "\n",
+    "%matplotlib inline\n",
+    "# from IPython.display import HTML, display, set_matplotlib_formats\n",
+    "from PIL import Image\n",
+    "from pytorch_lightning.callbacks import LearningRateMonitor, ModelCheckpoint\n",
+    "from torchvision import transforms\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "\n",
+    "# set_matplotlib_formats(\"svg\", \"pdf\")  # For export\n",
+    "matplotlib.rcParams[\"lines.linewidth\"] = 2.0\n",
+    "# sns.reset_orig()"
    ]
   },
   {
