pytorch lightning training works

--- a/pytorch_lightning.ipynb
+++ b/pytorch_lightning.ipynb
@@ -13,11 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.11 ('torch')' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: 'conda install -n torch ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
-    "# ! pip install --quiet pytorch-lightning"
+    "! pip install --quiet pytorch-lightning"
    ]
   },
   {
@@ -26,33 +37,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import imp\n",
     "import os\n",
-    "import urllib.request\n",
-    "from types import SimpleNamespace\n",
-    "from urllib.error import HTTPError\n",
-    "\n",
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
+    "from pyexpat import model\n",
+    "from idna import valid_string_length\n",
     "import numpy as np\n",
-    "import pytorch_lightning as pl\n",
-    "# import seaborn as sns\n",
-    "# import tabulate\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import torch.utils.data as data\n",
-    "import torchvision\n",
-    "\n",
-    "%matplotlib inline\n",
-    "# from IPython.display import HTML, display, set_matplotlib_formats\n",
+    "import matplotlib.pyplot as plt\n",
     "from PIL import Image\n",
-    "from pytorch_lightning.callbacks import LearningRateMonitor, ModelCheckpoint\n",
-    "from torchvision import transforms\n",
-    "from torchvision.datasets import CIFAR10\n",
     "\n",
-    "# set_matplotlib_formats(\"svg\", \"pdf\")  # For export\n",
-    "matplotlib.rcParams[\"lines.linewidth\"] = 2.0\n",
-    "# sns.reset_orig()"
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision.datasets import MNIST\n",
+    "from torch.utils.data import DataLoader\n",
+    "from torchvision import transforms, utils\n",
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "from dataloader import AerialDataset, NAME_CLASSES\n",
+    "from seg_module import train_model"
    ]
   },
   {
@@ -60,7 +62,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_set = AerialDataset(root='../aerial_dataset', train=True)\n",
+    "pl.seed_everything(42)\n",
+    "n_train = int(len(data_set) * 0.9)\n",
+    "train_set, val_set = torch.utils.data.random_split(data_set, [n_train, len(data_set) - n_train])\n",
+    "# img, label = train_set[0]\n",
+    "# img = torch.mul(img, 255).byte()\n",
+    "# f, axarr = plt.subplots(1, 2)\n",
+    "# axarr[0].imshow(img.permute(1, 2, 0))\n",
+    "# axarr[1].imshow(label)\n",
+    "# plt.show()\n",
+    "\n",
+    "# We define a set of data loaders that we can use for various purposes later.\n",
+    "train_loader = DataLoader(train_set, batch_size=4, shuffle=True, drop_last=True, pin_memory=True, num_workers=4)\n",
+    "val_loader = DataLoader(val_set, batch_size=4, shuffle=False, drop_last=False, num_workers=2)\n",
+    "device = torch.device(\"cuda:0\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "\n",
+    "\n",
+    "unet_model, unet_results = train_model(\n",
+    "\"UNet\",\n",
+    "train_loader,\n",
+    "val_loader,\n",
+    "device=device,\n",
+    "max_epochs=10,\n",
+    "model_hparams={\"num_classes\":len(NAME_CLASSES), \"input_channels\": 3},\n",
+    "optimizer_name=\"Adam\",\n",
+    "optimizer_hparams={\"lr\": 1e-3})\n",
+    "    \n",
+    "print(\"unet_model\", unet_results)\n",
+    "print('Testing is done!')\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
